--- a/css/game.css
+++ b/css/game.css
@@ -586,3 +586,62 @@
 [v-cloak] {
   display: none;
 }
+
+/**
+ * Header Controls
+ */
+
+.header-controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+/**
+ * Home Control
+ */
+
+.home-control {
+  position: absolute;
+  left:0;
+  margin-top: 1em;
+  margin-left: 1em;
+}
+
+/**
+ * Localization Controls
+ */
+
+.loc-sel {
+  position: absolute;
+  right: 0;
+  margin-right: 1em;
+  margin-top: 1em;
+  white-space: nowrap;
+  font-size: 10px;
+  color: #eeeeee;
+  font-family: 'Open Sans', sans-serif;
+  z-index: 999;
+}
+
+.loc-sel > div {
+  float: left;
+  display: inline-block;
+  padding: 4px;
+  margin-right: 2px;
+  cursor: pointer;
+}
+
+.loc-sel > .active {
+  border-radius: 3px;
+  background-color: rgba(255,255,255,0.2);
+}
+
+[data-loc] {
+  display: none;
+}
+
+[data-loc].active {
+  display: block;
+}
