Make game content fill window
Mostly this was correctly applying flexbox styles. One non-trivial issue
was make the `#game` div take the correct height (which in turn
determines the heights aquired by its decendant wavesurferes).

The issue was that the height of the `#game` `div` should resize based
on the other fixed hight *rows*. The carousel has to have its height
dynamically resized. The issue is that the `#game` `div` does not
respect the resized height, which either caused `#game` to overflow the
height of the viewport, or more bizzarly, just the fullsize wavesurfer
to be generated taller than its container, which almost completly
occludes the player controls.

This is a bug in the browser engine, as is reported on SE and else
where. The solution is to force a redraw, and this is done in
`game.coffeeL453`. For some reason the `0` in `show` is nessesary. By
the doc's this causes a visible animation of 0s.

--- a/css/game.css
+++ b/css/game.css
@@ -1,4 +1,23 @@
 /*
+ * Container
+ */
+
+.container-fluid {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+/*
+ * Header
+ */
+
+#header {
+  flex: 0 0 auto;
+}
+
+/*
  * Info
  */
 
@@ -13,6 +32,10 @@
     display: flex;
     align-items: center;
   }
+}
+
+#info {
+  flex: 0 0 auto;
 }
 
 #dial-col {
@@ -282,15 +305,30 @@
 /**
  * Game
  */
+
 #game {
-  height: 30em;
+  flex: 1 1;
 }
 
 /**
  * Game::Thumbnails
  */
 
+ #wave-selector-col {
+   height: 100%;
+ }
+
+ #wave-selector-col > div.row {
+   height: 100%;
+ }
+
 .thumb-container {
+  height: 20%;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+#info .thumb-container {
   height: 6em;
   padding-top: 7px;
   padding-bottom: 7px;
@@ -340,8 +378,12 @@
  * Game::Player
  */
 
+#wave-player-col {
+  height: 100%;
+}
+
 #wave-player-col > div.row {
-  height: 30em;
+  height: 100%;
 }
 
 #wave-player-container {
